# MoneyWise

./: .gitignore  LICENSE  Makefile  README.md  SETUP_GUIDE.md  setup.sh
moneywise-backend/: Cargo.toml  Makefile  README.md  build-production.sh  build-with-fallback.sh  config.toml  create-sqlx-data.py  env.example  final-build.sh  fix-sqlx-data.py  generate-sqlx-data.sh  prepare-offline.sh  setup.sh  sqlx-data.json  supabase_schema.sql
moneywise-backend/.sqlx/: query-4c98f3f20192af0634b4947bc7fdfcedae10383c130e743bba6cd77f0434b9bb.json  query-8057d7ab0e1c34867314a70f3788a230bc74f0c7a3c5031089afebc87a1918fd.json  query-8aa70209381d34726364a92e122c311216580e63101720a3261629ce8dbf9e40.json  query-99e7cd3271c3b5b96e46f2156d33f037897ed06873e51bbbf318a5f1fb9f1415.json  query-c24282d8413dce56bb90e7181f3550c0471d05a907b2884dabac7650713ebc2d.json
moneywise-backend/database/: README.md  build-deploy.sh
moneywise-backend/database/deploy/: README.md  supabase.sql
moneywise-backend/database/migrations/: 20250827000000_initial_schema.sql  README.md
moneywise-backend/database/schema/: README.md  indexes.sql  sample_data.sql  tables.sql  triggers.sql
moneywise-backend/docs/: learn_rust.md
moneywise-backend/migrations/: 20241201000000_initial_schema.sql  data-1755248683962.csv  data-1755248781085.csv  data-1755248801052.csv
moneywise-backend/src/: budget.rs  cache.rs  connections.rs  database.rs  error.rs  lib.rs  main.rs  models.rs
moneywise-backend/src/api/: budget.rs  config.rs  csrf.rs  mod.rs
moneywise-backend/src/cache/: cache_config.rs  cache_keys.rs  cache_operations.rs  cache_retry.rs  cache_service.rs  connection.rs  mod.rs
moneywise-backend/src/cache/core/: config.rs  mod.rs  operations.rs  retry.rs  serialization.rs  service.rs
moneywise-backend/src/cache/domains/: mod.rs
moneywise-backend/src/csrf/: mod.rs  service.rs
moneywise-backend/src/database/: connection.rs  mod.rs
moneywise-backend/src/rate_limiter/: config.rs  middleware.rs  mod.rs  service.rs  types.rs
moneywise-backend/src/server/: config.rs  mod.rs
moneywise-backend/tests/: budget_item_tests.rs  categories_tests.rs  connection_tests.rs  eviction_tests.rs  invalidation_tests.rs  overview_tests.rs
moneywise-backend/tests/common/: mock_budget_cache.rs  mock_redis.rs  mod.rs
tools/ocaml/: .ocamlformat  Makefile  Makefile.help  dune-project  moneywise-tools.opam
tools/ocaml/docs/: index.html
tools/ocaml/lib/: check_cmd.ml  commands.ml  commands.mli  dune  prerequisites.ml  setup_cmd.ml  status_cmd.ml  test_cmd.ml  types.ml  verify_cmd.ml
tools/ocaml/lib/setup/: backend_verification_steps.ml  dune  errors.ml  orchestrator.ml  output.ml  phase1_structure.ml  phase2_prerequisites.ml  phase3_backend.ml  phase3_backend_step1_checks.ml  phase3_frontend.ml  phase4_backend.ml  phase4_backend_step1_checks.ml  phase4_backend_step2_database_verify.ml  phase4_backend_step3_core_build.ml  phase4_backend_verification_steps.ml  phase4_frontend.ml  phase5_environment.ml  phase6_services.ml  phase7_validation.ml  phase_runner.ml  results.ml  (+2 more)
tools/ocaml/tests/: dune  prerequisites_test.ml
(+191 files in other folders)
