[package]
name = "moneywise-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

# Database
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "decimal", "macros"] }
postgres = "0.19"

# Redis for caching
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
tokio-retry = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Decimal for financial calculations - industry standard for money handling
# Provides exact precision and native serde support
rust_decimal = { version = "1.32", features = ["serde"] }

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

# Pin ring to avoid symbol issues with SQLx 0.6
ring = "0.16"

# Regex for precise path matching
regex = "1.0"
