(library
 (name setup)
 (public_name moneywise-tools.setup)
 (libraries unix cmdliner logs fmt)
 (modules
  types
  results
  errors
  utils
  phase1_structure
  phase2_prerequisites
  backend_verification_steps
  phase3_backend
  phase3_backend_step1_checks
  phase4_frontend
  phase5_environment
  phase6_services
  phase7_validation
  orchestrator)
 (wrapped false))
