(library
 (name setup)
 (public_name moneywise-tools.setup)
 (libraries unix cmdliner logs fmt)
 (modules
  types
  results
  errors
  utils
  phase1_structure
  phase2_prerequisites
  backend_verification_steps
  phase3_frontend
  phase4_backend
  phase4_backend_step1_checks
  phase5_environment
  phase6_services
  phase7_validation
  orchestrator)
 (wrapped false))
