(library
 (name setup)
 (public_name moneywise-tools.setup)
 (libraries unix cmdliner logs fmt)
 (modules
  types
  results
  errors
  utils
  output
  phase_runner
  phase1_structure
  phase2_prerequisites
  phase3_frontend
  phase4_backend
  phase4_backend_step1_checks
  phase4_backend_step2_database_verify
  phase4_backend_step3_core_build
  phase4_backend_verification_steps
  phase5_environment
  phase6_services
  phase7_validation
  orchestrator)
 (wrapped false))
